===================================
TSDuck Change Log and Release Notes
===================================

Version 3.6

- Added options --synchronous-log and --log-message-count to tsp. They affect
  the way log messages are dropped or displayed in case a vast amount of log
  messages are produced in a short period of time.

- The help text of all TSDuck applications (using option --help) is now paged
  through "less" or any any other pager application.

- Added the utility tsversion to manage TSDuck versions, detect new versions,
  upgrade, etc.

Version 3.5-414

- Added option --xml-output to tstables and plugin tables. Tables can be saved
  directly in XML format. It is no longer necessary to save in binary and then
  use the decompiler to rebuild XML files.

- With tstables and plugin tables, it is possible to specify several formats
  at the same time. For instance, it is possible to save tables in text, XML
  and binary format at the same time.

- With tspacketize and plugin inject, it is now possible to load tables in XML
  format. The options --binary and --xml have been added to specify the file
  type if its name is neither .bin nor .xml. It is no longer necessary to use
  the compiler to rebuild binary section files.

- Added option --byte to tsftrunc.

- The options --verbose and --debug have been generalized to all commands.

- For programmers, the TSDuck library API was extensively modified. All usage
  of 8-bit strings (char* and std::string) has been removed and replaced by
  Java-like Unicode strings (ts::UString). Many interface have been updated.
  The utilities in tsStringUtils have been removed. Equivalent services exist
  in class ts::UString. All of this break the backward compatibility of user
  code. This is unfortunate but TSDuck code is now more robust and faster to
  maintain.

- The "revision" number is no longer a "build date" but a "commit count".
  With a build date, there was a risk that two identical sets of sources had